# vector-2lab-

./: CMakeLists.txt  README.md  Отчет лаб 2.doc
Matrix/: CMakeLists.txt  main.cpp
MatrixLib/: CMakeLists.txt  Matrix.h  TriangleMatrix.h
Vector/: CMakeLists.txt  main.cpp
VectorLib/: CMakeLists.txt  Vector.cpp  Vector.h  VectorIterator.h
test/: CMakeLists.txt  test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
